--- a/css/main.css
+++ b/css/main.css
@@ -39,13 +39,13 @@ ul.team {
       position: absolute;
       top: 100%; 
       left: 50%; 
-      transform: translate(-50%, -20px); 
+      transform: translate(-50%, -30px); 
       background-color: rgba(0, 0, 0, 0.7);
-      color: white;
       padding: 0.5rem;
       border-radius: 5px;
-      white-space: nowrap; 
       z-index: 10; 
+      white-space: nowrap; 
+      font-size: 30px;
     }
 
     
